IOTS-470: changed Juno to Luna in board_id code IOTS-471: tweaked the device tree to bring it as close to the KSP-5015 as possible

--- a/arch/arm/dts/am572x-ksp-5015.dtsi
+++ b/arch/arm/dts/am572x-ksp-5015.dtsi
@@ -7,7 +7,7 @@
  */
 / {
 	model = "Density AM572x KSP-5015";
-	compatible = "phytec,am572x-ksp-5015", "phytec,am572x-phycore-som", "ti,am5728", "ti,dra742", "ti,dra74", "ti,dra7";
+	compatible = "phytec,am572x-ksp-5015", "phytec,am572x-phycore-som", "ti,dra72", "ti,dra74", "ti,dra7";
 
 	chosen {
 		stdout-path = &uart3;
