--- a/arch/arm/dts/am57xx-density-luna-s5b.dtsi
+++ b/arch/arm/dts/am57xx-density-luna-s5b.dtsi
@@ -298,8 +298,8 @@
 					regulator-name = "smps45";
 					regulator-min-microvolt = <850000>;
 					regulator-max-microvolt = <1150000>;
-					regulator-always-on;
-					regulator-boot-on;
+					regulator-always-off;
+					regulator-boot-off;
 				};
 
 				smps6_reg: smps6 {
